More fixes to nav color styles. Fixing spacing for some header elements

--- a/css/agency.css
+++ b/css/agency.css
@@ -140,7 +140,7 @@
 }
 .navbar-default .navbar-toggle:hover,.navbar-default .navbar-toggle:focus
 {
-    background-color:#fed136
+    background-color:#3e3c37;
 }
 .navbar-default .nav li a
 {
@@ -383,7 +383,7 @@
     position:absolute;
     content:"";
     width:2px;
-    background-color:#f1f1f1;
+    background-color:#d0dff1;
     /*left:50px;*/
     margin-left:-1.5px
 }
@@ -436,7 +436,7 @@
     background-color:#fed136;
     color:#fff;
     border-radius:100%;
-    border:5px solid #f1f1f1;
+    border:5px solid #d0dff1;
     text-align:center
 }
 .timeline>li .timeline-image h4
@@ -791,7 +791,7 @@
     ::selection
 {
     text-shadow:none;
-    background:#fed136
+    background:#a8d5ff;
 }
     img::selection
 {
