--- a/css/overrides.css
+++ b/css/overrides.css
@@ -9,9 +9,13 @@
 
 /* Nav overrides */
 .navbar-default .navbar-nav>.active>a{ background: none; }
-.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>.active>a:hover{
+.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
     background:none;
     color: #fff;
+}
+.navbar-default .navbar-nav>.active>a:hover {
+    color: #fec503;
+    background: none;
 }
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus {
     color: #fff284;
